fix icon on mobile browsers

--- a/src/components/Home/styles.module.scss
+++ b/src/components/Home/styles.module.scss
@@ -121,12 +121,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0;
-  min-width: 30px;
-  & * {
-    color: rgb(73, 72, 72);
-    max-width: 20px;
-  }
+}
+.icon {
+  color: rgb(73, 72, 72);
+  width: 24px;
 }
 .profileBio {
   margin-top: 10px;
